--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "md5": "^2.2.1",
+    "moment": "^2.24.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
+    "react-datepicker": "^2.8.0",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
     "react-router": "^5.0.1",
@@ -13,7 +15,8 @@
     "react-scripts": "3.0.1",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
-    "sweetalert": "^2.1.2"
+    "sweetalert": "^2.1.2",
+    "underscore": "^1.9.1"
   },
   "scripts": {
     "start": "react-scripts start",
